[package]
name = "pyxis-fs-common"
version = "0.1.0"
authors = ["chordtoll <git@chordtoll.com>"]
edition = "2021"
description = "Common functionality for pyxis-fs network filesystem"
license = "MIT"
repository = "https://github.com/chordtoll/pyxis-fs-common"

[package.metadata.arch]
arch = ["x86_64"]

[dependencies]
bincode = "1.3.3"
fuser = "0.10.0"
serde = { version = "1.0.133", features = ["derive"] }
quinn = "0.8.0"
libc = "0.2.113"

# Optional depenencies for parcel support
pyxis-parcel = { version="0.5.0", optional = true }

# Optional dependencies for certificate generation utility
rcgen = { version = "0.8.14", optional = true }

[features]
parcel = ["pyxis-parcel"]
certs = ["rcgen"]

[[bin]]
name = "gen-certs"
required-features = ["certs"]
